--- a/src/components/notes/NoteDetails/NoteDetails.css
+++ b/src/components/notes/NoteDetails/NoteDetails.css
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 .note-details {
     width: 800px;
     height: 100%;
+}
+
+.note-details__text-area {
+    resize: none;
+    border: none;
+    outline: none;
+
+    font-family: 'Roboto Mono', monospace;
+    font-size: 14px;
+
+    max-height: 672px;
+    width: 100%;
+
+    padding: 0 62px 40px 60px;
 }
