--- a/src/components/notes/NoteDetails/NoteDetails.css
+++ b/src/components/notes/NoteDetails/NoteDetails.css
@@ -2,7 +2,10 @@
 
 .note-details {
     width: 800px;
-    height: 100%;
+
+    height: 904px;
+
+    overflow-y: auto;
 }
 
 .note-details__text-area {
@@ -16,5 +19,9 @@
     max-height: 672px;
     width: 100%;
 
+    padding: 0 62px 40px 60px;
+}
+
+.note-details__preview {
     padding: 0 62px 40px 60px;
 }
