refactor: move note details to views folder, toolbar icons refactored, rename contexts folder to modules

--- a/src/components/notes/NoteDetailsToolbar/NoteDetailsToolbar.css
+++ b/src/components/notes/NoteDetailsToolbar/NoteDetailsToolbar.css
@@ -23,6 +23,10 @@
     fill: #0074DA;
     fill-opacity: 1;
 }
+.note-details-toolbar__edit svg:hover {
+    fill: #da8e00;
+    fill-opacity: 1;
+}
 
 .note-details-toolbar__remove svg:hover {
     fill: #B90445;
