--- a/src/components/core/Dialog/Dialog.css
+++ b/src/components/core/Dialog/Dialog.css
@@ -11,11 +11,10 @@
     height: 100%;
 
     background-color: rgba(0, 0, 0, 0.25);
-
-    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
 
 .dialog-content {
     position: absolute;
     background-color: #fff;
+    max-width: 100vw;
 }
