--- a/src/views/NoteDetails/NoteDetails.css
+++ b/src/views/NoteDetails/NoteDetails.css
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 .note-details {
-    width: 800px;
-
-    height: 904px;
-
+    height: 90vh;
     overflow-y: auto;
 }
 
